css/categories.css
header {
    position: relative;
}

main {
    position: relative;
/*    min-height: 1000px;*/
    background-color: #fafafa;
    padding-bottom: 50px;
}

#sidebar {
    position: absolute;
    height : 100%;
    width: 0;
    overflow-x: hidden;
    background-color: #eae6e6;
    -webkit-transition: all .5s;
    transition: all .5s;
    overflow: hidden;
    opacity: 0;
}

#sidebar ul {
    margin: 0;
    padding: 0;
    list-style-type: none;
}

#sidebar ul li {
    min-height: 35px;
    line-height: 35px;
}

#sidebar h4 {
    color: white;
    text-align: center;
    margin-top: 0;
    margin-bottom: 0;
    height: 50px;
    line-height: 50px;
    background-color: #023d71;
}

#sidebar ul li a {
    font-family: 'Cairo', sans-serif;
    display: block;
    color: #e6e4e4;
    padding-left: 15px;
    font-size: 1.1em;
    letter-spacing: .6px;
    color: #333;
    -webkit-transition: all .3s;
    
    transition: all .3s;
/*    border-bottom: 2px solid #01274a;*/
/*    border-top: 1px solid #045aa7;*/
}

#sidebar ul li:nth-of-type(even) a {
    box-shadow: inset 0 0 5px #bab9b9;
}

#sidebar ul li:first-of-type a {
    border-top : none;
}

#sidebar ul li a:hover {
    background-color: rgba(0, 0 , 0 , .3);
    text-decoration: none;
    color: white;
    border-top-color: #00305B;
}

#page_content {
    -webkit-transition: all .5s;
    transition: all .5s;
}

#main_content.sidebar_activated {
    min-height: 930px;
}

#main_content.sidebar_activated #sidebar {
    width: 200px;
    opacity: 1;
}

#main_content.sidebar_activated #page_content {
    padding-left: 200px;
}

#page_content .button_container {
    position: relative;
}

#page_content .button_container button {
    position: absolute;
    top: 8px;
    left: 10px;
    border: none;
    color: #00305B;
}

#page_content .button_container button span.star {
    font-size: 18px;
    position: absolute;
    top: 0;
    right: 3px;
    display: inline-block;
    color: #ea0101;
}

#page_content h2 {
    font-family: 'Cairo', sans-serif;
    font-size: 2.5em;
/*    margin-top: 30px;*/
    margin-top: 0;
    min-height: 50px;
    line-height: 50px;
    background-color: #00305B;
    color: white;
    text-align: center;
    
    -webkit-transition: all .5s;
    
    transition: all .5s;
}

#page_content .row {
    margin-top: 40px;
}


#page_content .row figure {
    position: relative;
    overflow: hidden;
    min-height: 300px;
    padding-top: 40px;
    border-radius: 7px;
    background-color: #f0f0f0;
}
#page_content .row figure h5 {
    position: absolute;
    margin-top: 0;
    top: 0;
    left: 0;
    width: 100%;
    min-height: 40px;
    line-height: 40px;
    text-align: center;
    background-color: #00305B;
    color: white;
    font-size: 1.5em;
    font-family: 'Cairo' , sans-serif;
}

#page_content .row figure .img_container {
    overflow: hidden;
    position: relative;
}

#page_content .row figure .img_container a.btn {
    position: absolute;
    top: 0;
    right: 0;
    opacity: 0;
    border: 0;
    color: black;
    
    -webkit-transition: all .5s;
    
    transition: all .5s;
}

#page_content .row figure:hover .img_container a.btn {
    opacity: 1;
    background-color: white;
}

#page_content .row figure:hover img {
    -webkit-transform: scale(1.2);
    transform: scale(1.2);
    
}

#page_content .row figure figcaption {
    width: 100%;
    color: #222;
    font-family: 'Cairo', sans-serif;
    font-weight: bold;
    padding: 5px;
}

#page_content .row [class*="col-"] img {
    width: 100%;
    -webkit-transition: all .5s;
    transition: all .5s;
}

#page_content .row a:hover {
    text-decoration: none;
}

#page_content .row [class*="col-"] {
        margin-top: 30px;
}




#edit_modal .modal-header {
    background-color: #00305B;
    color: white;
    max-height: 60px;
    line-height: 60px;
}

#edit_modal .modal-header h4.modal-title {
    margin: 0;
    font-size: 1.6em;
}

#edit_modal .modal-header button.close {
    color: white;
}

#edit_modal .modal-body {
    padding: 0;
    font-family: 'Cairo' , sans-serif;
    min-height: 500px;
}

#edit_modal .modal-body form {
    padding: 30px 40px;
}

#edit_modal .modal-body .tag_group .input_container {
    position: relative;
}

#edit_modal .modal-body .tag_group .input_container input {
    width: 600px;
}

#edit_modal .modal-body .tag_group .input_container button {
    position: absolute;
    right: 0;
    top: 0;
    height: 100%;
    border-radius: 0 5px 5px 0;
}

#edit_modal .modal-body .tag_group label {
    display: block;
}

#edit_modal .modal-body  button {
    background-color: #00305B;
    color: white;
    border: 0;
}


#post_categories_list {
    margin: 0 auto;
    list-style: none;
    padding: 0;
    position: relative;
}

#post_categories_list > li > a {
    display: block;
    padding-left: 1em;
    height: 2.5em;
    line-height: 2.5em;
    background-color: white;
    border-radius: 5px;
    border: 1px solid #d0cdcd;
    text-decoration: none;
    color: black;
}

#post_categories_list span.glyphicon {
    position: absolute;
    right: 1em;
    top: 1.2em;
    font-size: .8em;
    color: #4d4b4b;
}

#post_categories_list li ul {
    width: 100%;
    list-style: none;
    padding: 0;
    max-height: 150px;
    overflow: auto;
}

#post_categories_list li ul li {
    height: 2em;
    line-height: 2em;
    padding-left: 1em;
    cursor: pointer;
}

#post_categories_list li ul li:hover {
    background-color: #d6d6d6;
}

#post_categories_field{
    width: 0;
    height: 0;
    margin: 0;
    padding: 0;
    border: 0;
    overflow: hidden;
    opacity: 0;
    position: absolute;
}


#edit_modal .modal-dialog .form-group:last-of-type {
    text-align: right;
}

#edit_modal .modal-dialog .form-group:last-of-type a.btn {
    background-color: #a00404;
    border: none;
    color: white;
}

@media(max-width: 768px) {
 
    #main_content.sidebar_activated #page_content h2 {
        text-align: right;
        padding-right: 10px;
        font-size: 1.5em;
    }
    
    #page_content h2 {
        font-size: 2em;
    }
    
    #page_content .row {
        margin-top: 0;
    }
    
    #page_content .row [class*="col-"] {
        margin-top: 30px;
    }
    
    #page_content .row [class*="col-"] figure {
        max-width: 400px;
        margin: 0 auto;
        text-align: center;
    }
    
    #page_content .row [class*="col-"] img {
        width: 100%;
    }
    
 
}

